Moved common REST deps (non-jaxrs) to base-api-model. Cleaned-up all recyclone deps. Fixed 200 code-style problems and warnings. https://github.com/dropchop-com/recyclone/issues/22